cluster/tekkom-bot/bot/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tekkom-bot
  namespace: tekkom-bot
  labels:
    app: tekkom-bot
spec:
  type: ClusterIP
  selector:
    app: tekkom-bot
  ports:
    - protocol: TCP
      port: 6969
      targetPort: 6969
