cluster/tekkom-bot/bot/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft
  namespace: tekkom-bot
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "51.222.254.125/32, 24.144.78.128/32"
spec:
  ingressClassName: nginx-external
  tls:
    - hosts:
        - bot-mc.login.no
  rules:
    - host: bot-mc.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tekkom-bot
                port:
                  number: 6969
